--- a/_modules/snippets/access_large_csv.html
+++ b/_modules/snippets/access_large_csv.html
@@ -67,26 +67,30 @@
 <span></span><span class="kn">import</span> <span class="nn">csv</span>
 
 
-<div class="viewcode-block" id="access_large_csv"><a class="viewcode-back" href="../../snippets.html#snippets.access_large_csv.access_large_csv">[docs]</a><span class="k">def</span> <span class="nf">access_large_csv</span><span class="p">(</span><span class="n">filepath</span><span class="p">,</span> <span class="n">fieldname</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;opens csv file on filepath, provides the content as a generator yielding the elements of fieldname</span>
-<span class="sd">    it is thus able to handle files larger than the available memory</span>
+<div class="viewcode-block" id="access_large_csv"><a class="viewcode-back" href="../../snippets.html#snippets.access_large_csv.access_large_csv">[docs]</a><span class="k">def</span> <span class="nf">access_large_csv</span><span class="p">(</span><span class="n">filepath</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+                     <span class="n">fieldname</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
+    <span class="sd">&quot;&quot;&quot;Yields elements from csv-file.</span>
 
-<span class="sd">    :param filename: the path of the file to be opened</span>
-<span class="sd">    :param fieldname: The column &#39;fieldname&#39; will be used</span>
-<span class="sd">    :return: yields the elements of the selected columns</span>
+<span class="sd">    Opens csv-file and provides the content as a generator yielding the elements of the column fieldname</span>
+<span class="sd">    It is able to handle files larger than the available memory</span>
+
+<span class="sd">    Args:</span>
+<span class="sd">        filename: path to the file to be read</span>
+<span class="sd">        fieldname: key of the column to be returned</span>
+
+<span class="sd">    Returns:</span>
+<span class="sd">        yields the elements of the selected columns</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">file</span><span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
+    <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">filepath</span><span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
         <span class="n">content</span> <span class="o">=</span> <span class="n">csv</span><span class="o">.</span><span class="n">reader</span><span class="p">(</span><span class="n">f</span><span class="p">)</span>
-        <span class="c1"># header is the first line of content</span>
-        <span class="n">header</span> <span class="o">=</span> <span class="nb">next</span><span class="p">(</span><span class="n">content</span><span class="p">)</span>
-        <span class="c1"># print(header)</span>
-        <span class="c1"># find the position of fieldname in header</span>
+        <span class="n">header</span> <span class="o">=</span> <span class="nb">next</span><span class="p">(</span><span class="n">content</span><span class="p">)</span>  <span class="c1"># the first line of content</span>
+
         <span class="k">if</span> <span class="n">fieldname</span> <span class="ow">in</span> <span class="n">header</span><span class="p">:</span>
-            <span class="n">pos</span> <span class="o">=</span> <span class="n">header</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">fieldname</span><span class="p">)</span>
+            <span class="n">pos</span> <span class="o">=</span> <span class="n">header</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">fieldname</span><span class="p">)</span>  <span class="c1"># the position of fieldname in header</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="si">{}</span><span class="s2"> does not exist in file </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">fieldname</span><span class="p">,</span> <span class="n">filepath</span><span class="p">))</span>
-            <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;header: &#39;</span><span class="p">,</span> <span class="n">header</span><span class="p">)</span>
+            <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{fieldname}</span><span class="s2"> does not exist in file </span><span class="si">{filepath}</span><span class="s2">&quot;</span><span class="p">)</span>
+            <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;header: </span><span class="si">{header}</span><span class="s2">&quot;</span><span class="p">)</span>
         <span class="k">while</span> <span class="kc">True</span><span class="p">:</span>
             <span class="k">try</span><span class="p">:</span>
                 <span class="k">yield</span> <span class="nb">next</span><span class="p">(</span><span class="n">content</span><span class="p">)[</span><span class="n">pos</span><span class="p">]</span>
@@ -97,11 +101,11 @@
 <span class="k">if</span> <span class="vm">__name__</span> <span class="o">==</span> <span class="s1">&#39;__main__&#39;</span><span class="p">:</span>
 
     <span class="c1"># load data</span>
-    <span class="n">file</span> <span class="o">=</span> <span class="s2">&quot;data/ACWI.csv&quot;</span>
+    <span class="n">file</span> <span class="o">=</span> <span class="s2">&quot;../tests/test_data/ACWI.csv&quot;</span>
 
     <span class="c1"># access using next()</span>
     <span class="n">csv_gen</span> <span class="o">=</span> <span class="n">access_large_csv</span><span class="p">(</span><span class="n">file</span><span class="p">,</span> <span class="s2">&quot;Close&quot;</span><span class="p">)</span>
-    <span class="k">while</span> <span class="kc">True</span><span class="p">:</span>
+    <span class="k">while</span> <span class="kc">False</span><span class="p">:</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="nb">print</span><span class="p">(</span><span class="nb">next</span><span class="p">(</span><span class="n">csv_gen</span><span class="p">))</span>
         <span class="k">except</span> <span class="ne">StopIteration</span><span class="p">:</span>
@@ -116,11 +120,13 @@
             <span class="k">break</span>
 
     <span class="c1"># or by loop</span>
-    <span class="c1"># for index, _ in zip(access_large_csv(file, &quot;Close&quot;), range(5)):  # range only defines the end of the loop</span>
-    <span class="c1">#     print(index)</span>
+    <span class="k">while</span> <span class="kc">False</span><span class="p">:</span>
+        <span class="k">for</span> <span class="n">index</span><span class="p">,</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span><span class="n">access_large_csv</span><span class="p">(</span><span class="n">file</span><span class="p">,</span> <span class="s2">&quot;Close&quot;</span><span class="p">),</span> <span class="nb">range</span><span class="p">(</span><span class="mi">5</span><span class="p">)):</span>  <span class="c1"># range only defines the end of the loop</span>
+            <span class="nb">print</span><span class="p">(</span><span class="n">index</span><span class="p">)</span>
 
-    <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">access_large_csv</span><span class="p">(</span><span class="n">file</span><span class="p">,</span> <span class="s2">&quot;Close&quot;</span><span class="p">):</span>
-        <span class="nb">print</span><span class="p">(</span><span class="n">i</span><span class="p">)</span>
+    <span class="k">while</span> <span class="kc">False</span><span class="p">:</span>  <span class="c1"># without range all rows are printed</span>
+        <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">access_large_csv</span><span class="p">(</span><span class="n">file</span><span class="p">,</span> <span class="s2">&quot;Close&quot;</span><span class="p">):</span>
+            <span class="nb">print</span><span class="p">(</span><span class="n">i</span><span class="p">)</span>
 </pre></div>
 
            </div>
