--- a/_modules/snippets/access_large_csv.html
+++ b/_modules/snippets/access_large_csv.html
@@ -71,15 +71,15 @@
                      <span class="n">fieldname</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
     <span class="sd">&quot;&quot;&quot;Yields elements from csv-file.</span>
 
-<span class="sd">    Opens csv-file and provides the content as a generator yielding the elements of the column fieldname</span>
-<span class="sd">    It is able to handle files larger than the available memory</span>
+<span class="sd">    Opens csv-file and provides the content as a generator yielding the elements of the column `fieldname`.</span>
+<span class="sd">    It is able to handle files larger than the available memory.</span>
 
 <span class="sd">    Args:</span>
-<span class="sd">        filename: path to the file to be read</span>
-<span class="sd">        fieldname: key of the column to be returned</span>
+<span class="sd">        filename : path to the file to be read</span>
+<span class="sd">        fieldname : key of the column to be returned</span>
 
-<span class="sd">    Returns:</span>
-<span class="sd">        yields the elements of the selected columns</span>
+<span class="sd">    Yields:</span>
+<span class="sd">        Elements of the selected columns. One row per call</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">filepath</span><span class="p">)</span> <span class="k">as</span> <span class="n">f</span><span class="p">:</span>
