deploy: d8543b52446908092bc3aec8fbe0c3910c365512

--- a/_modules/snippets/access_large_csv.html
+++ b/_modules/snippets/access_large_csv.html
@@ -75,7 +75,7 @@
 <span class="sd">    It is able to handle files larger than the available memory.</span>
 
 <span class="sd">    Args:</span>
-<span class="sd">        filename : path to the file to be read</span>
+<span class="sd">        filepath : path to the file to be read</span>
 <span class="sd">        fieldname : key of the column to be returned</span>
 
 <span class="sd">    Yields:</span>
