--- a/snippets.html
+++ b/snippets.html
@@ -101,7 +101,7 @@ It is able to handle files larger than the available memory.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters</dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>filename</strong> – path to the file to be read</p></li>
+<li><p><strong>filepath</strong> – path to the file to be read</p></li>
 <li><p><strong>fieldname</strong> – key of the column to be returned</p></li>
 </ul>
 </dd>
